Added and styled the assets

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.15.1/css/pro.min.css">
         <link rel="stylesheet" href="/index.css">
-        <title>Document</title>
+        <title>Noamaan Mulla's Portfolio</title>
     </head>
     <body>
         <main class="container-fluid d-flex p-0">
             <div class="container-fluid m-auto myInfo">
                 <h3 class="h3 d-flex flex-column">
                     <span class="text-monospace px-3">Hi, I'm Noamaan Mulla</span>
-                    <span class="text-monospace px-3">A Web Developer</span>
+                    <span class="text-monospace px-3">An aspiring Web Developer</span>
                     <h6 class="h6 p-3">Currently a CSE student at Anjuman-E-Islam Abdul Razzak Kalsekar Polytechnic, Panvel. Wishes to be a successful web developer in near future.</h6>
                 </h3>
                 <div class="contact p-3">
@@ -27,9 +27,21 @@
                 </div>
                 <a class="btn btn-primary m-3" href="mailto:noamaan.mulla03@gmail.com">Say Hello</a>
             </div>
-            <div class="container-fluid p-0 myProjects">
-                <img class="" width="100%" src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80">
-                <img class="" width="100%" src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80">
+            <div class="container-fluid p-0 myProjects bg-primary pl-1">
+                <h3 class="h3 text-monospace mt-4 mb-4 text-white pl-4">Check out some of my awesome projects</h3>
+                <div class="project-container">
+                    <p class="text-white mb-0 mt-5">1. Flipkart made with HTML5, CSS and JavaScript.</p>
+                    <video class="pb-4 my-4" src="/assets/proj_4.mp4" controls width="100%"></video>
+                    <p class="text-white mb-0 mt-4">2. BookByWeight made with HTML5, CSS</p>
+                    <video class="pb-4 my-4" src="/assets/proj_3.mp4" controls width="100%"></video>
+                    <p class="text-white mb-0 mt-4">3. Instagram login page made with HTML5, CSS and JavaScript.</p>
+                    <video class="pb-4 my-4" src="/assets/proj_2.mp4" controls width="100%"></video>
+                    <p class="text-white mb-0 mt-4">4. Swift vacations landing page made with HTML5, CSS.</p>
+                    <video class="pb-4 my-4" src="/assets/proj_1.mp4" controls width="100%"></video>
+                </div>
+                <div class="footer">
+                    <p class="text-monospace bg-primary text-white text-center m-0 p-4">&#169;2021 Noamaan Mulla. Made in the India.</p>
+                </div>
             </div>
         </main>
     </body>
