--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <video class="pb-4 my-4" src="/assets/proj_1.mp4" controls width="100%"></video>
                 </div>
                 <div class="footer">
-                    <p class="text-monospace bg-primary text-white text-center m-0 p-4">&#169;2021 Noamaan Mulla. Made in the India.</p>
+                    <p class="text-monospace bg-primary text-white text-center m-0 p-4">&#169;2021 Noamaan Mulla. Made in India.</p>
                 </div>
             </div>
         </main>
